# rec

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: architecture.md  guide.md
newsrec/: __init__.py
newsrec/config/: base.yaml
newsrec/config/finetune/: normal.yaml  paac.yaml
newsrec/config/pretrain/: aap_only.yaml  attribute.yaml  bsm_only.yaml  full.yaml  item_level.yaml  map_only.yaml  mip_only.yaml  sequence_level.yaml  sp_only.yaml
newsrec/config/smoke/: finetune.yaml  pretrain.yaml
newsrec/data/: __init__.py  collate.py  download.py  finetune_dataset.py  mind_parser.py  news_tokens.py  popularity.py  pretrain_dataset.py  vocab.py
newsrec/eval/: __init__.py  evaluator.py  metrics.py
newsrec/losses/: __init__.py  infonce.py  paac_losses.py  pretrain_losses.py
newsrec/models/: __init__.py  attention_pooler.py  fastformer.py  news_encoder.py  plm_encoder.py  pretrain_model.py  rec_model.py  user_encoder.py
newsrec/scripts/: __init__.py  common.py  prepare_data.py  push_dataset.py  run_finetune.py  run_pretrain.py
newsrec/training/: __init__.py  batch_finder.py  checkpoint.py  finetuner.py  hub_uploader.py  lora_schedule.py  pretrainer.py
newsrec/utils/: __init__.py  config.py  env.py  logging.py  seed.py
papers/: PAAC.md
scripts/: _env.sh  finetune_baseline.sh  finetune_normal.sh  pretrain_aap_only.sh  pretrain_attribute.sh  pretrain_bsm_only.sh  pretrain_full.sh  pretrain_item_level.sh  pretrain_map_only.sh  pretrain_mip_only.sh  pretrain_sequence_level.sh  pretrain_sp_only.sh  push_dataset.sh  run_all_scenarios.sh
tests/: conftest.py  test_batch_finder.py  test_checkpoint_wiring.py  test_config.py  test_dataset_scenarios.py  test_env.py  test_finetune.py  test_metrics_eval.py  test_mind_parser.py  test_news_encoder.py  test_paac.py  test_plm_encoder.py  test_popularity.py  test_pretrain_dataset.py  test_pretrain_losses.py  test_rec_model.py  test_smoke.py  test_user_encoder.py
