[project]
name = "newsrec"
version = "0.1.0"
description = "Popularity-debiased MIND news recommender (pre-train -> PAAC fine-tune)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "huggingface_hub>=0.23",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsrec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
