[project]
name = "newsrec"
version = "0.1.0"
description = "Popularity-debiased MIND news recommender (pre-train -> PAAC fine-tune)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # torch is routed to the CUDA 12.8 wheel index (see [tool.uv] below).
    # The default PyPI wheels ship a CUDA 13 build that is incompatible with
    # common datacenter/consumer drivers (e.g. 570.x / CUDA 12.8) and with
    # Blackwell GPUs via cu128. Keep this floor at a Blackwell-capable release.
    "torch>=2.7",
    "transformers>=4.40",
    "peft>=0.10",
    "huggingface_hub>=0.23",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsrec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Install torch from the CUDA 12.8 wheel index so `uv sync` produces a GPU
# build that matches CUDA 12.8 drivers and supports Blackwell (sm_120).
# Verified working on an RTX 5070 Ti (driver 570.133, torch 2.11.0+cu128).
# These cu128 wheels also install and run fine on CPU-only machines.
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
